--- a/portal-web/build.xml
+++ b/portal-web/build.xml
@@ -744,7 +744,7 @@
 								alert( 'You cannot upload a video file if video preview generation is disabled.' );
 								break ;
 							case 211:
-								alert( 'File contains virus or an error occurred while scanning the file' );
+								alert( 'File may contain a virus.' );
 								break ;
 							case 220:
 								alert( 'You cannot upload a video file if video preview generation is disabled.' );
