--- a/portal-impl/src/content/Language.properties
+++ b/portal-impl/src/content/Language.properties
@@ -942,6 +942,8 @@ an-unexpected-sign-in-error-occurred=An unexpected sign in error occurred.
 an-unexpected-system-error-occurred=An unexpected system error occurred.
 analytics=Analytics
 and=And
+and-operator=And Operator
+and-or-operator=And/Or Operator
 and-then-by=And Then By
 and-x-more=and {0} more.
 anniversary=Anniversary
@@ -1309,6 +1311,9 @@ border-styles=Border Styles
 border-styling=Border Styling
 border-width=Border Width
 bottom=Bottom
+bottom-border-unit=Bottom Border Unit
+bottom-margin-unit=Bottom Margin Unit
+bottom-padding-unit=Bottom Padding Unit
 branch=Branch
 branches=Branches
 breadcrumb=Breadcrumb
@@ -1373,6 +1378,7 @@ cas-server-name-help=Set this to enable deep linking into the portal (e.g. http:
 cas-server-url-help=Set the CAS server domain URL.
 cas-service-url-help=Set this to disable deep linking into the portal (e.g. http://localhost:8080/c/portal/login). Do not set this if the CAS server name is set.
 categories=Categories
+categories-admin-select-search=Categories Admin Select Search
 categories-and-messages=Categories and Messages
 categories[message-board]=Categories
 categorization=Categorization
@@ -1384,6 +1390,8 @@ category-services=Category Services
 category-sets=Category Sets
 category[message-board]=Category
 cc=CC
+cc-exp-month=CC Expiration Month
+cc-exp-year=CC Expiration Year
 cc_amex=American Express
 cc_discover=Discover
 cc_mastercard=MasterCard
@@ -1429,6 +1437,7 @@ chapter=Chapter
 chapters=Chapters
 characters-maximum=Characters Maximum
 chart=Chart
+chart-type=Chart Type
 chart-width=Chart Width
 charts=Charts
 chat=Chat
@@ -1746,6 +1755,7 @@ custom-message=Custom Message
 custom-portlet-xml=Custom portlet.xml
 custom-question=Custom Question
 custom-range=Custom Range
+custom-title=Custom Title
 custom-user-attributes=Custom User Attributes
 custom-user-attributes-help=Specifying the custom user attributes will retrieve assets that have matching categorization. Categories must be from the global context.
 custom.field.boolean=True/False
@@ -1987,6 +1997,7 @@ disk=Disk
 dismiss=Dismiss
 display=Display
 display-a-datepicker=Display a Datepicker
+display-activity-counter-name=Display Activity Counter Name
 display-additional-activity-counters=Display Additional Activity Counters
 display-as-tooltip=Display as Tooltip
 display-asset-categories-facet=Display Asset Categories Facet
@@ -2481,7 +2492,9 @@ finished=Finished
 firm-name=Firm Name
 firms=Firms
 first=First
+first-day-of-week=First Day of Week
 first-message=First Message
+first-month-of-year=First Month of Year
 first-name=First Name
 first-name-attribute=First Name Attribute
 first-thread=First Thread
@@ -2996,6 +3009,7 @@ language-to=Language to
 language-type=Language Type
 languages=Languages
 large=Large
+large-file=Large File
 large-image=Large Image
 large-image-url=Large Image URL
 large-rectangle=Large Rectangle
@@ -3056,6 +3070,7 @@ layout-template-2-columns-iii=2 Columns (70/30)
 layout-template-3-2-3-columns=3-2-3 Columns
 layout-template-3-columns=3 Columns
 layout-template-freeform=Freeform
+layout-template-id=Layout Template ID
 layout-template-plugin=Layout Template Plugin
 layout-template-plugins=Layout Template Plugins
 layout-templates=Layout Templates
@@ -3088,6 +3103,9 @@ leave-site=Leave Site
 leave-this-blank-if-the-coupon-does-not-check-for-the-item-sku=Leave this blank if the coupon does not check for the item SKU.
 leave-this-blank-if-the-coupon-does-not-check-for-the-parent-categories-of-an-item=Leave this blank if the coupon does not check for the parent categories of an item.
 left=Left
+left-border-unit=Left Border Unit
+left-margin-unit=Left Margin Unit
+left-padding-unit=Left Padding Unit
 legal-id=Legal ID
 legal-name=Legal Name
 legal-type=Legal Type
@@ -3162,6 +3180,7 @@ lockout-duration-help=This determines the amount of time that a user's account i
 lockout-enabled=Lockout Enabled
 lockout-enabled-help=If this is checked, a user can attempt to login a certain number of times before their account is locked.
 log-levels=Log Levels
+logger-name=Logger Name
 login=Login
 login-through-facebook=Login through Facebook
 login-url=Login URL
@@ -3281,6 +3300,7 @@ maybe-attending=Maybe Attending
 me=Me
 media-files-must-be-one-of-the-following-formats=Media files must be one of the following formats:
 medium=Medium
+medium-file=Medium File
 medium-image=Medium Image
 medium-image-url=Medium Image URL
 medium-rectangle=Medium Rectangle
@@ -3315,6 +3335,7 @@ merge-x-public-pages=Merge {0} public pages
 merged-from-x-x=(Merged from {0}, {1})
 message=Message
 message-added-email=Message Added Email
+message-attachment=Message Attachment
 message-board-messages=Message Board Messages
 message-boards-home=Message Boards Home
 message-boards-message-anonymous-help=If this is checked, then this message will be posted anonymously.
@@ -3546,6 +3567,7 @@ monday-abbreviation=M
 monitoring=Monitoring
 month=Month
 month-abbreviation=m
+month-position=Month Position
 month-s=month(s)
 monthly=Monthly
 monthly-payment=Monthly Payment
@@ -3621,6 +3643,7 @@ never-review=Never Review
 new=New
 new-action-for-x=New Action for {0}
 new-application-display-template=New Application Display Template
+new-article-id=New Article ID
 new-blog-entry=New Blog Entry
 new-bookmark=New Bookmark
 new-category=New Category
@@ -4395,6 +4418,7 @@ pop-up=Pop Up
 port=Port
 portal=Portal
 portal-data=Portal Data
+portal-ext=Portal EXT
 portal-instance=Portal Instance
 portal-instance-help=Object that represents the current portal instance.
 portal-instance-id=Portal Instance Identifier
@@ -4479,6 +4503,9 @@ principal=Principal
 print=Print
 print-x-x=Print <span class="{0}">{1}</span>
 priority=Priority
+priority-image=Priority Image
+priority-name=Priority Name
+priority-value=Priority Value
 private=Private
 private-node=Private Node
 private-nodes=Private Nodes
@@ -4558,6 +4585,7 @@ purchase-order=Purchase Order
 px=px
 quantity=Quantity
 query=Query
+query-contains=Query Contains
 query-indexing-enabled-help=If this is checked, queries that meet the threshold are indexed and suggested to users as related queries or as part of autocomplete suggestions.
 query-indexing-threshold=Query Indexing Threshold
 query-indexing-threshold-help=If the number of search results meets this threshold, the query is indexed and suggested to users searching with similar queries.
@@ -4675,6 +4703,7 @@ remember-me=Remember Me
 reminder=Reminder
 reminder-queries=Reminder Queries
 reminder-query-and-answer-cannot-be-empty=Reminder query and answer cannot be empty.
+reminder-query-question=Reminder Query Question
 remote-host-ip=Remote Host/IP
 remote-live=Remote Live
 remote-live-connection-settings=Remote Live Connection Settings
@@ -4720,6 +4749,7 @@ reply=Reply
 reply-all=Reply All
 reply-as=Reply as...
 reply-as-anonymous=Reply as Anonymous
+reply-body=Reply Body
 reply-comments=Reply Comments
 reply-date=Reply Date
 reply-membership-request-for-x=Reply Membership Request for {0}
@@ -4822,6 +4852,9 @@ rich=Rich
 rich-text-format=Rich Text Format
 ridge=Ridge
 right=Right
+right-border-unit=Right Border Unit
+right-margin-unit=Right Margin Unit
+right-padding-unit=Right Padding Unit
 robots=Robots
 role=Role
 role-name=Role Name
@@ -4892,12 +4925,14 @@ script-file=Script File
 search=Search
 search-all-organizations=Search All Organizations
 search-all-users=Search All Users
+search-application=Search Application
 search-applications-searches-as-you-type=Search applications (searches as you type).
 search-bookmarks=Search Bookmarks
 search-by-id-or-url=Search by ID or URL
 search-categories=Search Categories
 search-configuration=Search Configuration
 search-configuration-help=This field is used to apply advanced search configuration settings in the form of a JSON string.
+search-content=Search Content
 search-coupons=Search Coupons
 search-custom-range-date-format=Please enter a date in the following format: YYYY-MM-DD
 search-custom-range-invalid-date-range=Please select a valid date range.
@@ -4924,6 +4959,7 @@ search-operator=Search Operator
 search-orders=Search Orders
 search-organizations=Search Organizations
 search-pages=Search Pages
+search-panel=Search Panel
 search-password-policies=Search Password Policies
 search-plugins=Search Plugins
 search-products=Search Products
@@ -4972,6 +5008,7 @@ select-a-page=Select a Page
 select-a-site=Select a Site
 select-a-structure-to-filter-the-web-content-list-by-a-structure=Select a structure to filter the web content list by a structure.
 select-a-type=Select a Type
+select-all=Select All
 select-an-action-type=Select an Action Type
 select-an-existing-list-or-add-a-list-to-be-displayed-in-this-portlet=Select an existing list or add a list to be displayed in this portlet.
 select-and-copy=Select And Copy
@@ -5003,6 +5040,7 @@ select-parent-site=Select Parent Site
 select-portlet=Select Portlet
 select-question=Select Question
 select-recipients=Select Recipients
+select-search=Select Search
 select-site=Select Site
 select-tags=Select Tags
 select-the-action-that-this-role-can-perform-on-the-x-portlet=Select the action that this role can perform on the <em>{0}</em> portlet.
@@ -5084,6 +5122,7 @@ servers=Servers
 service=Service
 service-account=Service Account
 service-password=Service Password
+service-search=Service Search
 service-url=Service URL
 service-url-for-opensso-help=This URL is where OpenSSO can be accessed to use the authentication web services. If you are using OpenSSO Express 8 or higher, you need to have the server running Java 6.
 services=Services
@@ -5296,13 +5335,16 @@ skyscraper=Skyscraper
 slide-show=Slide Show
 slovak=Slovak
 small=Small
+small-file=Small File
 small-image=Small Image
+small-image-file=Small Image File
 small-image-url=Small Image URL
 small-rectangle=Small Rectangle
 small-square=Small Square
 smartphone=Smartphone
 sms=SMS
 sms-messenger-id=SMS Messenger ID
+sms-sn=SMS Screen Name
 social-activity-limit-type-times=times
 social-activity-limit-type-times-a-day=times a day
 social-activity-limit-type-times-per-period=times per period
@@ -6204,8 +6246,11 @@ tomorrow=Tomorrow
 ton=Ton
 tools=Tools
 top=Top
+top-border-unit=Top Border Unit
 top-level=Top Level
 top-level-organizations=Top Level Organizations
+top-margin-unit=Top Margin Unit
+top-padding-unit=Top Padding Unit
 top-posters=Top Posters
 top-users-out-of-x=Top users out of {0}.
 topic=Topic
@@ -6700,6 +6745,7 @@ with-scope=with scope
 withdraw-submission=Withdraw Submission
 within=Within
 within-x=Within {0}
+word=Word
 word-search=Word Search
 word-spacing=Word Spacing
 wordpress=WordPress
@@ -6829,6 +6875,7 @@ yahoo-cvs=Yahoo! CSV:
 yard=Yard
 year=Year
 year-abbreviation=y
+year-position=Year Position
 year-s=year(s)
 year-to-date=Year to Date
 yearly=Yearly
