--- a/portal-impl/src/portal.properties
+++ b/portal-impl/src/portal.properties
@@ -150,6 +150,7 @@
     upgrade.processes.6120=${upgrade.processes.master}
     upgrade.processes.6130=${upgrade.processes.master}
     upgrade.processes.6200=${upgrade.processes.master}
+    upgrade.processes.6201=${upgrade.processes.master}
 
     #
     # If this property is specified with a list of classes, then the portal will
