--- a/test.properties
+++ b/test.properties
@@ -699,6 +699,7 @@
         legacy.plugin.includes,\
         mobile.device.enabled,\
         mobile.device.type,\
+        portal.url,\
         portal.version,\
         portlet.plugins.includes,\
         portlet.properties.knowledge-base-portlet,\
