SourceFormatter - Fix incorrect property

--- a/portal-impl/src/com/liferay/portal/tools/dependencies/source-formatter.properties
+++ b/portal-impl/src/com/liferay/portal/tools/dependencies/source-formatter.properties
@@ -160,7 +160,7 @@
     # Set this property to true to allow *ServiceImpl classes to directly call
     # methods in *ServiceUtil classes.
     #
-    allow.service.util.use.in.service.impl=true
+    allow.use.service.util.in.service.impl=true
 
     #
     # Specify incorrect and excpected parameters for the methods
