--- a/test.properties
+++ b/test.properties
@@ -694,7 +694,7 @@
 ##
 
     testcase.available.property.names=\
-        app.server.bundle.count,\
+        app.server.bundles.size,\
         cluster.enabled,\
         custom.properties,\
         database.sharding,\
