LPS-45739 - Source formatting

--- a/portal-impl/src/content/Language.properties
+++ b/portal-impl/src/content/Language.properties
@@ -4064,6 +4064,7 @@ pause=Pause
 payer-email-address=Payer Email Address
 payment-gross=Payment Gross
 payment-settings=Payment Settings
+paypal=PayPal
 paypal-email-address=PayPal Email Address
 paypal-order=PayPal Order
 pending=Pending
@@ -5292,8 +5293,8 @@ sku=SKU
 skus=SKUs
 skype=Skype
 skyscraper=Skyscraper
-slovak=Slovak
 slide-show=Slide Show
+slovak=Slovak
 small=Small
 small-image=Small Image
 small-image-url=Small Image URL
