LPS-45592 Properties page shows db password

--- a/portal-impl/src/portal.properties
+++ b/portal-impl/src/portal.properties
@@ -8949,6 +8949,12 @@
     #
     admin.analytics.types=google\npiwik
 
+    #
+    # Add a comma delimited list of properties that are obfuscated and replaced
+    # with ******** when viewed in the Control Panel.
+    #
+    admin.obfuscated.properties=jdbc.default.password
+
 ##
 ## Announcements Portlet
 ##
