--- a/portal-impl/src/content/Language_sr_RS_latin.properties
+++ b/portal-impl/src/content/Language_sr_RS_latin.properties
@@ -888,6 +888,7 @@ always=Uvek
 always-use-my-user-id=Uvek koristite moj ID korisnika.
 am=AM (Automatic Copy)
 am-pm=AM/PM (Automatic Copy)
+amazon-rankings=Amazon Rankings (Automatic Copy)
 americas=Amerika
 amount=Iznos
 an-account-with-x-as-the-email-address-already-exists-in-the-portal.-do-you-want-to-associate-this-activity-with-that-account=Nalog sa {0} e-mejl adresom već postoji u portalu. Da li želite da povežete ovu aktivnost sa tim nalogom?
@@ -941,6 +942,8 @@ an-unexpected-sign-in-error-occurred=Dogodila se neočekivana greškaprilikom pr
 an-unexpected-system-error-occurred=Dogodila se neočekivana sistemska greška.
 analytics=Analitika
 and=I
+and-operator=And Operator (Automatic Copy)
+and-or-operator=And/Or Operator (Automatic Copy)
 and-then-by=I Onda Od
 and-x-more=i {0} više.
 anniversary=Godišnjica
@@ -1308,6 +1311,9 @@ border-styles=Stilovi Okvira
 border-styling=Okvir Stajling
 border-width=Širina Okvira
 bottom=Dno
+bottom-border-unit=Bottom Border Unit (Automatic Copy)
+bottom-margin-unit=Bottom Margin Unit (Automatic Copy)
+bottom-padding-unit=Bottom Padding Unit (Automatic Copy)
 branch=Grana
 branches=Grane
 breadcrumb=Prezla
@@ -1372,6 +1378,7 @@ cas-server-name-help=Podesite ovo da omogućite duboko povezivanje u portalu (np
 cas-server-url-help=Postavite URL domen CAS servera.
 cas-service-url-help=Podesite ovo da omogućite duboko povezivanje u portalu (npr. http://localhost:8080). Ne podešavajte ovo ako je CAS ime servera podešen.
 categories=Kategorije
+categories-admin-select-search=Categories Admin Select Search (Automatic Copy)
 categories-and-messages=Kategorije i Poruke
 categories[message-board]=Kategorije
 categorization=Kategorizacija
@@ -1383,6 +1390,8 @@ category-services=Category Services (Automatic Copy)
 category-sets=Setovi Kategorije
 category[message-board]=Kategorija
 cc=CC (Automatic Copy)
+cc-exp-month=CC Expiration Month (Automatic Copy)
+cc-exp-year=CC Expiration Year (Automatic Copy)
 cc_amex=Amerikan Ekspres
 cc_discover=Otkriti
 cc_mastercard=MasterKard
@@ -1428,6 +1437,7 @@ chapter=Poglavlje
 chapters=Poglavlja
 characters-maximum=Maksimalno Karaktera
 chart=Grafikon
+chart-type=Chart Type (Automatic Copy)
 chart-width=Širina Grafa
 charts=Grafikoni
 chat=Čet
@@ -1745,6 +1755,7 @@ custom-message=Prilagođena Poruku
 custom-portlet-xml=Prilagođeni portlet.xml
 custom-question=Prilagođeno Pitanje
 custom-range=Prilagođeni Rang
+custom-title=Custom Title (Automatic Copy)
 custom-user-attributes=Prilagođeni Korisnički Atributi
 custom-user-attributes-help=Određivanje prilagođenih korisničkih atributa će preuzeti sredstva koja imaju odgovarajuće kategorizacije. Kategorije moraju biti u globalnom kontekstu.
 custom.field.boolean=Tačno / Netačno
@@ -1986,6 +1997,7 @@ disk=Disk (Automatic Copy)
 dismiss=Odbaci
 display=Prikaži
 display-a-datepicker=Prikaži Kalendar
+display-activity-counter-name=Display Activity Counter Name (Automatic Copy)
 display-additional-activity-counters=Prikaži Dodatne Aktivnosti Brojača
 display-as-tooltip=Prikaži kao Tultip
 display-asset-categories-facet=Prikaz Kategorije Sredstava
@@ -2480,7 +2492,9 @@ finished=Završen
 firm-name=Ime Firme
 firms=Firme
 first=Prva
+first-day-of-week=First Day of Week (Automatic Copy)
 first-message=Prva Poruka
+first-month-of-year=First Month of Year (Automatic Copy)
 first-name=Ime
 first-name-attribute=Atribut Imena
 first-thread=Prva Tema
@@ -2995,6 +3009,7 @@ language-to=Language to (Automatic Copy)
 language-type=Tip Jezika
 languages=Jezici
 large=Veliki
+large-file=Large File (Automatic Copy)
 large-image=Velika Slika
 large-image-url=Velika Slika URL
 large-rectangle=Veliki Pravougaonik
@@ -3055,6 +3070,7 @@ layout-template-2-columns-iii=2 Columns (70/30) (Automatic Copy)
 layout-template-3-2-3-columns=3-2-3 Columns (Automatic Copy)
 layout-template-3-columns=3 Columns (Automatic Copy)
 layout-template-freeform=Freeform (Automatic Copy)
+layout-template-id=Layout Template ID (Automatic Copy)
 layout-template-plugin=Raspored Templejt Dodatak
 layout-template-plugins=Raspored Templejt Dodaci
 layout-templates=Raspored Templejti
@@ -3087,6 +3103,9 @@ leave-site=Napusti Sajt
 leave-this-blank-if-the-coupon-does-not-check-for-the-item-sku=Ostavite prazno ako ovaj kupon ne proverava stavku SKU.
 leave-this-blank-if-the-coupon-does-not-check-for-the-parent-categories-of-an-item=Ostavite prazno ako ovaj kupon ne proverava roditelja kategorije stavke.
 left=Levo
+left-border-unit=Left Border Unit (Automatic Copy)
+left-margin-unit=Left Margin Unit (Automatic Copy)
+left-padding-unit=Left Padding Unit (Automatic Copy)
 legal-id=Pravni ID
 legal-name=Pravni Naziv
 legal-type=Pravni Tip
@@ -3161,6 +3180,7 @@ lockout-duration-help=To određuje vreme kada je korisnički nalog zaključan.
 lockout-enabled=Blokiranje Omogućeno
 lockout-enabled-help=Ako je ovo izabrano, korisnik može da pokuša da se ulogujete određeni broj puta pre nego što mu nalog bude zaključan.
 log-levels=Nivoi Logova
+logger-name=Logger Name (Automatic Copy)
 login=Prijava
 login-through-facebook=Ulogujte se preko Fejsbuka
 login-url=URL za Prijavljivanje
@@ -3280,6 +3300,7 @@ maybe-attending=Možda Prisustvujem
 me=Ja
 media-files-must-be-one-of-the-following-formats=Medija fajlovi moraju biti u jednom od sledećih formata:
 medium=Srednji
+medium-file=Medium File (Automatic Copy)
 medium-image=Srednja Slika
 medium-image-url=Srednja Slika URL
 medium-rectangle=Srednji Pravougaonik
@@ -3296,6 +3317,8 @@ membership-type-private-help=Korisnicima nije dozvoljeno da traže članstvo. Sa
 membership-type-restricted-help=Korisnici mogu da zatraže članstvo. Zahtev će morati da bude odobren od strane administratora.
 memberships=Članstva
 memory=Memorija
+memory-used-vs-max-memory=Memory Used vs. Max Memory (Automatic Copy)
+memory-used-vs-total-memory=Memory Used vs. Total Memory (Automatic Copy)
 menu=Menu (Automatic Copy)
 merge=Spoj
 merge-data=Objedini Podatak
@@ -3312,6 +3335,7 @@ merge-x-public-pages=Objedini {0} javnih stranica
 merged-from-x-x=(Spojena forma {0}, {1})
 message=Poruka
 message-added-email=Poruka Dodaj E-mejl
+message-attachment=Message Attachment (Automatic Copy)
 message-board-messages=Forum Poruke
 message-boards-home=Poruka Forum Početna
 message-boards-message-anonymous-help=Ako je ovo izabrano, onda će ova poruka biti objavljena anonimno.
@@ -3543,6 +3567,7 @@ monday-abbreviation=M (Automatic Copy)
 monitoring=Nadgledanje
 month=Mesec
 month-abbreviation=m (Automatic Copy)
+month-position=Month Position (Automatic Copy)
 month-s=mesec(i)
 monthly=Mesečno
 monthly-payment=Mesečno Plaćanje
@@ -3555,6 +3580,7 @@ more-rows-at-bottom=Više redova na dnu.
 more-x-results=Još {0} Rezultata
 move=Premesti
 move-column=Premesti Kolonu
+move-down=Move Down (Automatic Copy)
 move-files=Izmesti Datoteke
 move-page=Premesti Stranicu
 move-selected-item-in-x-one-position-down=Premesti izabranu stavku {0} jednu mesto dole.
@@ -3563,6 +3589,7 @@ move-selected-items-from-x-to-x=Premesti izabrane stavke iz {0} na {1}.
 move-thread=Premesti Temu
 move-to=Premesti Na
 move-to-the-recycle-bin=Move to the Recycle Bin (Automatic Copy)
+move-up=Move Up (Automatic Copy)
 move-web-content=Move Web Content (Automatic Copy)
 move-x=Move {0} (Automatic Copy)
 movie=Film
@@ -3616,6 +3643,7 @@ never-review=Nikada Pregled
 new=Novi
 new-action-for-x=New Action for {0} (Automatic Copy)
 new-application-display-template=New Application Display Template (Automatic Copy)
+new-article-id=New Article ID (Automatic Copy)
 new-blog-entry=Novi Blog Unos
 new-bookmark=Novi Bukmark
 new-category=Nova Kategorija
@@ -4059,6 +4087,7 @@ pause=Pauza
 payer-email-address=Obveznik Adresa E-mejl
 payment-gross=Plaćanje Bruto
 payment-settings=Podešavanja Plaćanja
+paypal=PayPal (Automatic Copy)
 paypal-email-address=PayPal E-mejl Adresa
 paypal-order=PayPal Naručivanje
 pending=Na Čekanju
@@ -4389,6 +4418,7 @@ pop-up=Pop Up (Automatic Copy)
 port=Luka
 portal=Portal (Automatic Copy)
 portal-data=Portal Podaci
+portal-ext=Portal EXT (Automatic Copy)
 portal-instance=Portal Instance (Automatic Copy)
 portal-instance-help=Object that represents the current portal instance. (Automatic Copy)
 portal-instance-id=Portal Instance Identifier (Automatic Copy)
@@ -4473,6 +4503,9 @@ principal=Glavnica
 print=Štampaj
 print-x-x=Štampaj <span class="{0}">{1}</span>
 priority=Prioritet
+priority-image=Priority Image (Automatic Copy)
+priority-name=Priority Name (Automatic Copy)
+priority-value=Priority Value (Automatic Copy)
 private=Privatni
 private-node=Privatni Čvor
 private-nodes=Privatni Čvorovi
@@ -4552,6 +4585,7 @@ purchase-order=Narudžbenica
 px=px (Automatic Copy)
 quantity=Količina
 query=Query (Automatic Copy)
+query-contains=Query Contains (Automatic Copy)
 query-indexing-enabled-help=If this is checked, queries that meet the threshold are indexed and suggested to users as related queries or as part of autocomplete suggestions. (Automatic Copy)
 query-indexing-threshold=Query Indexing Threshold (Automatic Copy)
 query-indexing-threshold-help=If the number of search results meets this threshold, the query is indexed and suggested to users searching with similar queries. (Automatic Copy)
@@ -4669,6 +4703,7 @@ remember-me=Zapamti Me
 reminder=Podsetnik
 reminder-queries=Podsetnik Upiti
 reminder-query-and-answer-cannot-be-empty=Podsetnik upit i odgovor ne može biti prazan.
+reminder-query-question=Reminder Query Question (Automatic Copy)
 remote-host-ip=Udaljeni Host / IP
 remote-live=Daljinski Uživo
 remote-live-connection-settings=Daljinski Uživo Podešavanje Konekcije
@@ -4714,6 +4749,7 @@ reply=Odgovori
 reply-all=Odgovori Svima
 reply-as=Odgovori kao...
 reply-as-anonymous=Odgovori kao Nepoznat
+reply-body=Reply Body (Automatic Copy)
 reply-comments=Odgovor Komentari
 reply-date=Odgovor Datum
 reply-membership-request-for-x=Odgovori Zahtev za Članstvo za {0}
@@ -4816,6 +4852,9 @@ rich=Bogat
 rich-text-format=Format Obogaćenog Teksta
 ridge=Greben
 right=Prava
+right-border-unit=Right Border Unit (Automatic Copy)
+right-margin-unit=Right Margin Unit (Automatic Copy)
+right-padding-unit=Right Padding Unit (Automatic Copy)
 robots=Roboti
 role=Uloga
 role-name=Ime Uloge
@@ -4886,12 +4925,14 @@ script-file=Script File (Automatic Copy)
 search=Pretraga
 search-all-organizations=Pretraži Sve Organizacije
 search-all-users=Pretraži Sve Korisnike
+search-application=Search Application (Automatic Copy)
 search-applications-searches-as-you-type=Pretraga aplikacija (pretraga dok kucate).
 search-bookmarks=Pretraži Oznake
 search-by-id-or-url=Pretraga po ID ili URL
 search-categories=Pretraži Kategorije
 search-configuration=Konfiguracija Pretrage
 search-configuration-help=Ovo polje se koristi da primenite napredne pretrage podešavanja konfiguracije u obliku stringa JSON.
+search-content=Search Content (Automatic Copy)
 search-coupons=Pretraži Kupone
 search-custom-range-date-format=Please enter a date in the following format: YYYY-MM-DD (Automatic Copy)
 search-custom-range-invalid-date-range=Please select a valid date range. (Automatic Copy)
@@ -4918,6 +4959,7 @@ search-operator=Pretraži Operatore
 search-orders=Pretraži Porudžbine
 search-organizations=Pretraži Organizacije
 search-pages=Pretraži Stranice
+search-panel=Search Panel (Automatic Copy)
 search-password-policies=Pretraži Politike Lozinke
 search-plugins=Pretraži Dodatke
 search-products=Pretraži Proizvode
@@ -4966,6 +5008,7 @@ select-a-page=Izabrana Stranica
 select-a-site=Izaberi Sajt
 select-a-structure-to-filter-the-web-content-list-by-a-structure=Izaberite strukturu za filtriranje liste veb sadržaja od strukture.
 select-a-type=Izaberi Tip
+select-all=Select All (Automatic Copy)
 select-an-action-type=Izaberi Tip Akcije
 select-an-existing-list-or-add-a-list-to-be-displayed-in-this-portlet=Izaberite postojeću listu ili dodajte listu koja će da se prikazuje u ovom portletu.
 select-and-copy=Izaberite i Kopirajte
@@ -4997,6 +5040,7 @@ select-parent-site=Select Parent Site (Automatic Copy)
 select-portlet=Izaberite Portlet
 select-question=Izaberite Pitanje
 select-recipients=Izaberite Primaoca
+select-search=Select Search (Automatic Copy)
 select-site=Select Site (Automatic Copy)
 select-tags=Izaberite Oznake
 select-the-action-that-this-role-can-perform-on-the-x-portlet=Izaberite radnju koja ovu ulogu može da izvrši na <em>{0} </em>portletu.
@@ -5078,6 +5122,7 @@ servers=Serveri
 service=Servis
 service-account=Servis Nalog
 service-password=Servis Lozinka
+service-search=Service Search (Automatic Copy)
 service-url=URL Servisa
 service-url-for-opensso-help=Ovaj URL je gde se može pristupiti OpenSSO da koriste usluge autentifikacije veb servisa. Ako koristite OpenSSO Express 8 ili veći, potrebno je da imate server koji radi pod Java 6.
 services=Servisi
@@ -5287,15 +5332,19 @@ sku=SKU (Automatic Copy)
 skus=SKU
 skype=Skajp
 skyscraper=Oblakoder
+slide-show=Slide Show (Automatic Copy)
 slovak=Slovački
 small=Mali
+small-file=Small File (Automatic Copy)
 small-image=Mala Slika
+small-image-file=Small Image File (Automatic Copy)
 small-image-url=Mala Slika URL
 small-rectangle=Mali Pravougaonik
 small-square=Mali Kvadrat
 smartphone=Smartphone (Automatic Copy)
 sms=SMS (Automatic Copy)
 sms-messenger-id=SMS Mesindžer ID
+sms-sn=SMS Screen Name (Automatic Copy)
 social-activity-limit-type-times=puta
 social-activity-limit-type-times-a-day=puta dnevno
 social-activity-limit-type-times-per-period=puta u periodu
@@ -6197,8 +6246,11 @@ tomorrow=Sutra
 ton=Ton (Automatic Copy)
 tools=Alati
 top=Vrh
+top-border-unit=Top Border Unit (Automatic Copy)
 top-level=Top Level (Automatic Copy)
 top-level-organizations=Organizacija Najvišeg Nivoa
+top-margin-unit=Top Margin Unit (Automatic Copy)
+top-padding-unit=Top Padding Unit (Automatic Copy)
 top-posters=Top Posteri
 top-users-out-of-x=Top korisnici od {0}.
 topic=Tema
@@ -6693,6 +6745,7 @@ with-scope=u okviru
 withdraw-submission=Povuci Podnošenje
 within=U okviru
 within-x=Within {0} (Automatic Copy)
+word=Word (Automatic Copy)
 word-search=Pretraga Reči
 word-spacing=Reč Razmak
 wordpress=WordPress (Automatic Copy)
@@ -6822,6 +6875,7 @@ yahoo-cvs=Yahoo! CSV: (Automatic Copy)
 yard=Jard
 year=Godine
 year-abbreviation=G
+year-position=Year Position (Automatic Copy)
 year-s=godina(e)
 year-to-date=Godina do Danas
 yearly=Godišnje
