LPS-50381 - test.properties

--- a/test.properties
+++ b/test.properties
@@ -201,6 +201,7 @@
         portal-frameworks,\
         portal-infrastructure,\
         portal-integrations,\
+		portal-knowledge-base,\
         portal-known-issues,\
         portal-legacy,\
         portal-opensocial,\
