LPS-50473 Add new property to control hibernate cache flushing frequency in staging

--- a/portal-impl/src/portal.properties
+++ b/portal-impl/src/portal.properties
@@ -7989,6 +7989,15 @@
     #
     staging.remote.transfer.buffer.size=10485760
 
+    #
+    # An import part of the staging publication normally runs in a single
+    # transaction. During long running transactions it's advised to flush the
+    # Hibernate level 1 cache thus making sure the big entities are not being
+    # kept in the memory. Define this property after how many imported entity
+    # should the import flush the Hibernate level 1 cache.
+    #
+    staging.hibernate.cache.flush.frequency=500
+
 ##
 ## Strip
 ##
