--- a/portal-impl/src/portal.properties
+++ b/portal-impl/src/portal.properties
@@ -7990,11 +7990,11 @@
     staging.remote.transfer.buffer.size=10485760
 
     #
-    # An import part of the staging publication normally runs in a single
-    # transaction. During long running transactions it's advised to flush the
-    # Hibernate level 1 cache thus making sure the big entities are not being
-    # kept in the memory. Define this property after how many imported entity
-    # should the import flush the Hibernate level 1 cache.
+    # The import phase of the staging publication process normally runs in a
+	# single transaction. During long running transactions, it is better to
+	# flush the Hibernate level 1 cache so that large entities are not kept in
+	# the memory. Set this property to 500 to flush the Hibernate level 1 cache
+	# every time 500 entities are imported.
     #
     staging.hibernate.cache.flush.frequency=500
 
